# bitly

./: Cargo.toml  README.md
migrations/2020-03-17-185138_create_shortlinks/: down.sql  up.sql
migrations/2020-03-18-141413_canonical_shortlinks/: up.sql
migrations/2020-03-18-141422_custom_shortlinks/: down.sql  up.sql
migrations/2020-03-18-162114_stats/: down.sql  up.sql
migrations/postgres/2020-03-18-141413_canonical_shortlinks/: down.sql
src/: lib.rs  main.rs  models.rs  schema.rs  server.rs
