[package]
name = "bitly"
version = "0.1.0"
authors = ["Siobhán Sterrett <siobhan.sterrett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "1.4"
dotenv = "0.15"
rand = "0.7"
url = "2.1"

[dev-dependencies]
diesel = { version = "1.4", features = ["sqlite", "chrono", "r2d2"] }
actix-http = "1.0"
